# ChangeLog for dev-python/pyyaml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/ChangeLog,v 1.12 2009/09/04 17:56:09 patrick Exp $

*pyyaml-3.09 (04 Sep 2009)

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> +pyyaml-3.09.ebuild:
  Bump to 3.09, remove 3.05

*pyyaml-3.08-r1 (29 Aug 2009)

  29 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pyyaml-3.08-r1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  09 Aug 2009; nixnut <nixnut@gentoo.org> pyyaml-3.08.ebuild:
  ppc stable #277972

  16 Jul 2009; Thomas Anderson <gentoofan23@gentoo.org> pyyaml-3.08.ebuild:
  stable amd64, bug 277972

  15 Jul 2009; Christian Faulhammer <fauli@gentoo.org> pyyaml-3.08.ebuild:
  stable x86, bug 277861

  14 May 2009; <solar@gentoo.org> pyyaml-3.08.ebuild:
  - keyword ~arm

  17 Feb 2009; Patrick Lauer <patrick@gentoo.org> pyyaml-3.08.ebuild:
  Patch no longer needed, fixes #259374

*pyyaml-3.08 (15 Feb 2009)

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> +pyyaml-3.08.ebuild:
  Bump to 3.08

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  16 Oct 2007; Stefan Briesenick <sbriesen@gentoo.org> pyyaml-3.05.ebuild:
  added NEED_PYTHON

  16 Oct 2007; Stefan Briesenick <sbriesen@gentoo.org>
  +files/pyyaml-3.05-libyaml.diff, pyyaml-3.05.ebuild:
  some cleanups

*pyyaml-3.05 (05 Oct 2007)

  05 Oct 2007; Stefan Briesenick <sbriesen@gentoo.org> +metadata.xml,
  +pyyaml-3.05.ebuild:
  initial commit.
