@@ -4,7 +4,7 @@ DIST PyYAML-3.08.tar.gz 229297 RMD160 fe034d73a8cdc98381099106ac8884d6b6f917d8 S
 DIST PyYAML-3.09.tar.gz 238383 RMD160 b5a5228db448e9c9507682cb36f620596a4a234c SHA1 6131d6a42bbd3e88d7efa3784d69395a136267be SHA256 30076d51387cca35d461c8b36408de189d31f17e44d45cd2200bbd2d02f555c1
 EBUILD pyyaml-3.05.ebuild 901 RMD160 7c66eaa7d8adc7f2b7814c73ec9ac9593faeef22 SHA1 41cc153fb91864b849d5d5b4d8e4e26504960938 SHA256 4c8aaa442cd6e04b86561a2085f19feeea41d8439c8f4795b24788b59a460672
 EBUILD pyyaml-3.08-r1.ebuild 821 RMD160 c7074d4870dcb3d7d997198d6ae89abfd98a60be SHA1 56f4b2d0276d221f00359d3dc25cf0b867d39121 SHA256 3f2fb614e406585e2246199415545f83890b286c2d984d68b6b194afb86ae2c3
-EBUILD pyyaml-3.08.ebuild 782 RMD160 b3eb81efb94a0fb380b8fbfa80a5b18097b19c68 SHA1 345de85808e03424a63429046e7c3790596184ab SHA256 cac90db993962127f96b04ef06ce3d4118937b06688ee5f1366d0f90cb61fc5b
-EBUILD pyyaml-3.09.ebuild 817 RMD160 03703dcfef58bfe502404da368c778982b25f45b SHA1 09f5229d95cf2e8a9a9b514ed7ae2a376fb16f14 SHA256 6a6003ce1256de298fe238290ead298e0abd7b4dc2cdef4ed6fb452c03edaea9
-MISC ChangeLog 1559 RMD160 45773011c04e16e5db0f3bddcd3f8632e6e0b662 SHA1 341d2e3bd14028400165292e16a34694bca138d2 SHA256 23bf97c65efb611225ef6f484fc4de71638f84382fe05b786e29e23cb93ff9aa
+EBUILD pyyaml-3.08.ebuild 782 RMD160 65140bec6ac117479f26ec71b303dafa80052d7d SHA1 ce620dcc0647e6d9d733c94be0877c3de4aadee2 SHA256 99ff940982ae853136d743a3d46358185a82d626a9497542fc3f0b6a1b6fa4d8
+EBUILD pyyaml-3.09.ebuild 883 RMD160 e6196471051c3bd854ffee7741f4835cb584e19f SHA1 2103f6143d0fa26e04e0bc29507aeaf00fe3699e SHA256 b24e5f2d791fbdfe0b9be82070155f2d6636f75e7eb8bcacb707db845de1c7ac
+MISC ChangeLog 1924 RMD160 8c0d5b21dfed5fe3c1f24ae308f93b3d8b819ed9 SHA1 338a961d50b566375dbb842c21f195f1c2ee084d SHA256 2b57c655efedf40c71b23cea3ae2adef71002f6d8dbfe1964ea1c74d177c8fee
 MISC metadata.xml 452 RMD160 0a6e770ba9b6398fb55a1e6d370cf0f3549d27cf SHA1 d07e06e0437530d14bd71b80f884b578415ec940 SHA256 07fa46b209853b14ad2aae50bd20c5df521b07e364f82642bf11ca43c82fb70b
