@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/pyyaml-3.08.ebuild,v 1.6 2009/08/09 13:10:59 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/pyyaml-3.08.ebuild,v 1.7 2009/09/05 19:06:56 ranger Exp $
 
 NEED_PYTHON="2.3"
 
