@@ -1,6 +1,16 @@
 # ChangeLog for dev-python/pyyaml
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/ChangeLog,v 1.12 2009/09/04 17:56:09 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/ChangeLog,v 1.15 2009/09/05 19:06:56 ranger Exp $
+
+  05 Sep 2009; Brent Baude <ranger@gentoo.org> pyyaml-3.08.ebuild:
+  Marking pyyaml-3.08 ppc64 for bug 277972
+
+  05 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  pyyaml-3.09.ebuild:
+  Fix automagic dependency on dev-libs/libyaml (bug #278004).
+
+  05 Sep 2009; Patrick Lauer <patrick@gentoo.org> -pyyaml-3.05.ebuild:
+  Really remove 3.05 now
 
 *pyyaml-3.09 (04 Sep 2009)
 
